[tool.poetry]
name = "referral-program-dw"
version = "0.1.0"
description = ""
authors = ["pozdniakova olga <caramelca07@mail.ru>"]
readme = "README.md"
packages = [{include = "referral_program_dw"}]

[tool.poetry.dependencies]
python = "^3.11"
poetry = "^1.7.0"
django = "^4.2.7"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
twilio = "^8.10.1"
djangorestframework-simplejwt = "^5.3.0"
drf-yasg = "^1.21.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
